<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openai_header"
        android:textSize="18sp"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/edittext_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="openai_token"
        android:hint="@string/openai_token_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/button_submit_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openai_button" />


</LinearLayout>