<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:padding="12dp">

    <!-- Institution Name -->
    <EditText
        android:id="@+id/editTextInstitution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_institution_name"
        android:inputType="textCapWords" />

    <!-- Degree / Major -->
    <EditText
        android:id="@+id/editTextDegree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_degree_major"
        android:inputType="textCapWords"
        android:layout_marginTop="8dp" />

    <!-- Dates -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/education_hint_start_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/editTextEndDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/education_hint_end_date"
            android:inputType="date"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <!-- Divider Line -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BDBDBD"
        android:layout_marginTop="12dp"/>
</LinearLayout>
